--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL = "http://localhost:8000"
-SERVICE_PROVIDER_URL = "http://localhost:5174"
+VITE_SERVICE_PROVIDER_URL = "http://localhost:5174"
